--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -52,7 +52,7 @@
     {% endif %}
 
     {% if member.description or type %}
-      <span class="portrait-description" style="display: block; margin-top: 0.3em; text-align: left;">
+      <span class="portrait-description" style="display: block; margin-top: 0.3em; text-align: center;">
         {{ member.description | default: type.description }}
       </span>
     {% endif %}
