--- a/_styles/portrait.scss
+++ b/_styles/portrait.scss
@@ -13,7 +13,7 @@
   flex-direction: column;
   margin: 20px;
   width: 175px;
-  max-width: calc(100% - 20px - 20px);
+  max-width: min(175px, 35%);
   text-decoration: none;
 }
 
@@ -54,7 +54,7 @@
 
 .portrait-image {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   aspect-ratio: 1 / 1;
   border-radius: 999px;
   object-fit: cover;
